--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install APT dependencies
-        run: apt-get install criterion-dev
+        run: sudo apt-get install criterion-dev
 
       - name: Run the tests
         run: make test
